--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
-body {
-    text-align: center;
-    background-color: pink;
-}
-
 img {
     border-radius: 100px;
-    width: 1000px;
-    height: 600px;
+    max-width: 100%;
+    height: auto;
+}
+
+@media (min-width: 1024px) {
+    img {
+        width: 1000px;
+        height: 600px;
+    }
 }
