--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+body {
+    text-align: center;
+    background-color: pink;
+}
+
 img {
     border-radius: 100px;
     max-width: 100%;
@@ -6,7 +11,7 @@ img {
 
 @media (min-width: 1024px) {
     img {
-        width: 1000px;
+        width: 700px;
         height: 600px;
     }
 }
